--- a/Unit1_Django_Fundamentals/Lesson7_Django_Templates/myproject/posts/templates/posts/posts_list.html
+++ b/Unit1_Django_Fundamentals/Lesson7_Django_Templates/myproject/posts/templates/posts/posts_list.html
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>POSTS LIST</title>
-</head>
-<body>
-    <h1>Posts List</h1>
-</body>
-</html>
+{% extends "base.html" %}
+{% block title %}POSTS LIST{% endblock title %}
+{% block header_image %}posts.webp{% endblock header_image %}
+{% block header_title %}Posts List{% endblock header_title %}Posts List
