--- a/Unit1_Django_Fundamentals/Lesson7_Django_Templates/myproject/templates/base.html
+++ b/Unit1_Django_Fundamentals/Lesson7_Django_Templates/myproject/templates/base.html
@@ -29,9 +29,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="/">Home</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="/about">About</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="/posts">Posts</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded {% if active_link == 'home' %}active{% endif %}" href="/">Home</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded {% if active_link == 'about' %}active{% endif %}" href="/about">About</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded {% if active_link == 'posts' %}active{% endif %}" href="/posts">Posts</a></li>
                     </ul>
                 </div>
             </div>
@@ -40,7 +40,7 @@
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="{% static 'assets/img/avataaars.svg' %}" alt="..." />
+                <img class="masthead-avatar mb-5" src="{% static 'assets/blog/' %}{%block header_image%}{%endblock header_image%}" alt="..." />
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">{% block header_title %}{% endblock header_title %}</h1>
                 <!-- Icon Divider-->
