--- a/Unit2_Django Models/Lesson1_Models_and_Migrates/myproject/templates/base.html
+++ b/Unit2_Django Models/Lesson1_Models_and_Migrates/myproject/templates/base.html
@@ -50,7 +50,8 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Graphic Artist - Web Designer - Illustrator</p>
+                {% comment %} <p class="masthead-subheading font-weight-light mb-0">Graphic Artist - Web Designer - Illustrator</p> {% endcomment %}
+                {% block content %}{% endblock content %}
             </div>
         </header>
 
