--- a/Unit2_Django Models/Lesson4_Dummy_Data/myproject/posts/templates/posts/post_page.html
+++ b/Unit2_Django Models/Lesson4_Dummy_Data/myproject/posts/templates/posts/post_page.html
@@ -1,25 +1,19 @@
 {% extends "base.html" %}
-{% block title %}POSTS LIST{% endblock title %}
+{% block title %}{{post.title}}{% endblock title %}
 {% block head %}
 {%load static%}
 <link rel="stylesheet" href="{%static 'css/posts.css'%}">
 {% endblock head %}
-{% block header_image %}posts.webp{% endblock header_image %}
-{% block header_title %}Posts List{% endblock header_title %}
+{% block header_title %}{{post.title}}{% endblock header_title %}
 {% block content %}
 <div class="row justify-content-center">
-    {% for post in posts  %}
+
         <div class="col-md-8">
         <article class = "post bg-light p-4 mb-4 rounded shadow-sm">
-            <h2 class="post-title">
-                <a href="{% url 'posts:page' slug=post.slug%}">
-                {{post.title}}
-                </a>
-            </h2>
             <p class="post-date">{{post.date}}</p>
             <p class="post-body">{{post.body}}</p>
         </article>
         </div>
-    {% endfor %}
+
 </div>
 {% endblock content %}
