--- a/Unit2_Django Models/Lesson4_Dummy_Data/myproject/posts/templates/posts/post_page.html
+++ b/Unit2_Django Models/Lesson4_Dummy_Data/myproject/posts/templates/posts/post_page.html
@@ -1,19 +1,26 @@
 {% extends "base.html" %}
-{% block title %}{{post.title}}{% endblock title %}
+
+{% block title %}
+{{post.title}}
+{% endblock title %}
+
 {% block head %}
 {%load static%}
 <link rel="stylesheet" href="{%static 'css/posts.css'%}">
 {% endblock head %}
-{% block header_title %}{{post.title}}{% endblock header_title %}
+
+{% block header_title %}
+{{post.title}}
+{% endblock header_title %}
+
+
 {% block content %}
 <div class="row justify-content-center">
-
         <div class="col-md-8">
         <article class = "post bg-light p-4 mb-4 rounded shadow-sm">
             <p class="post-date">{{post.date}}</p>
             <p class="post-body">{{post.body}}</p>
         </article>
         </div>
-
 </div>
 {% endblock content %}
