--- a/Unit2_Django Models/Lesson4_Dummy_Data/myproject/posts/templates/posts/posts_list.html
+++ b/Unit2_Django Models/Lesson4_Dummy_Data/myproject/posts/templates/posts/posts_list.html
@@ -4,7 +4,12 @@
 {%load static%}
 <link rel="stylesheet" href="{%static 'css/posts.css'%}">
 {% endblock head %}
-{% block header_image %}posts.webp{% endblock header_image %}
+
+{% load static %}
+{% block header_image %}
+<img class="masthead-avatar mb-5" src="{% static 'assets/blog/posts.webp' %}" alt="..." />
+{% endblock header_image %}
+
 {% block header_title %}Posts List{% endblock header_title %}
 {% block content %}
 <div class="row justify-content-center">
