--- a/Unit2_Django Models/Lesson4_Dummy_Data/myproject/templates/about.html
+++ b/Unit2_Django Models/Lesson4_Dummy_Data/myproject/templates/about.html
@@ -1,4 +1,10 @@
 {% extends "base.html"%}
 {% block title %}ABOUT{% endblock title %}
-{% block header_image %}about.png{% endblock header_image %}
+
+{% load static %}
+{% block header_image %}
+<img class="masthead-avatar mb-5" src="{% static 'assets/blog/about.png' %}" alt="..." />
+{% endblock header_image %}
+
+
 {% block header_title %}ABOUT ME{% endblock header_title %}
