--- a/Unit2_Django Models/Lesson4_Dummy_Data/myproject/templates/index.html
+++ b/Unit2_Django Models/Lesson4_Dummy_Data/myproject/templates/index.html
@@ -1,4 +1,10 @@
 {% extends "base.html"%}
 {% block title %}HOME PAGE{% endblock title %}
-{% block header_image %}homepage.png{% endblock header_image %}
+
+{% load static %}
+{% block header_image %}
+<img class="masthead-avatar mb-5" src="{% static 'assets/blog/homepage.png' %}" alt="..." />
+{% endblock header_image %}
+
+
 {% block header_title %}HOME PAGE{% endblock header_title %}
