10/28/24 User  Form Alignment

--- a/Unit2_Django Models/Lesson8_Custom_User_Form/myproject/users/templates/users/register.html
+++ b/Unit2_Django Models/Lesson8_Custom_User_Form/myproject/users/templates/users/register.html
@@ -7,55 +7,80 @@
     <img src="{% static 'assets/blog/register.png' %}" alt="Register" width="200px" class="register-image">  <!-- Add the image in the header_image block -->
 {% endblock header_image %}
 
-{% block content %}   <!-- Define content block -->
-    <h1>Register a New User</h1>  <!-- Heading text -->
-    <form action="/users/register/" method="POST" class="p-4 border rounded bg-light text-dark">
-        {% csrf_token %}{% comment %}  # security token Cross-site Request Forgery Attacks {% endcomment %}
-        {% comment %} {{form}} {% endcomment %}
-        {% comment %} Display Form Errors {% endcomment %}
-        {%if form.errors%}
-        <div class="alert alert-danger">
-            <ul>
-                {%for field in form%}
-                    {%if field.errors%}
-                        <li>{{field.label}}:{{field.errors}}</li>
-                    {%endif%}
-                {%endfor%}
-            </ul>
-        </div>
-        {%endif%}
+{% block content %}
+    <h1>Register a New User</h1>
+    <div class="container p-4 border rounded bg-light text-dark" style="max-width: 500px;>
+        <form action="/users/register/" method="post">
+            {% csrf_token %}
+           
+            <!-- Display form errors -->
+            {% if form.errors %}
+                <div class="alert alert-danger">
+                    <ul>
+                        {% for field in form %}
+                            {% if field.errors %}
+                                <li>{{ field.label }}: {{ field.errors|striptags }}</li>
+                            {% endif %}
+                        {% endfor %}
+                        {% for error in form.non_field_errors %}
+                            <li>{{ error }}</li>
+                        {% endfor %}
+                    </ul>
+                </div>
+            {% endif %}
+           
+            <div class="row mb-3">
+                <label for="{{ form.username.id_for_label }}" class="col-sm-6 col-form-label">Username</label>
+                <div class="col-sm-6">
+                    {{ form.username }}
+                </div>
+            </div>
 
-        <div class="mb-3">
-         <label for="{{form.username.id_for_label}}">Username</label>
-         {{form.username}}   
-        </div>
-        
-        <div class="mb-3">
-         <label for="{{form.email.id_for_label}}">Email</label>
-         {{form.email}}   
-        </div>
 
-        <div class="mb-3">
-         <label for="{{form.first_name.id_for_label}}">First Name</label>
-         {{form.first_name}}   
-        </div>
+            <div class="row mb-3">
+                <label for="{{ form.email.id_for_label }}" class="col-sm-6 col-form-label">Email</label>
+                <div class="col-sm-6">
+                    {{ form.email }}
+                </div>
+            </div>
 
-        <div class="mb-3">
-         <label for="{{form.last_name.id_for_label}}">Last Name</label>
-         {{form.last_name}}   
-        </div>
 
-        <div class="mb-3">
-            <label for="{{form.password1.id_for_label}}">Password</label>
-            {{form.password1}}
-        </div>
-        <div class="mb-3">
-            <label for="{{form.password2.id_for_label}}">Password Confirmation</label>
-            {{form.password2}}
-        </div>
-        
+            <div class="row mb-3">
+                <label for="{{ form.first_name.id_for_label }}" class="col-sm-6 col-form-label">First Name</label>
+                <div class="col-sm-6">
+                    {{ form.first_name }}
+                </div>
+            </div>
 
-       
-        <button>Submit</button>
-    </form>
+
+            <div class="row mb-3">
+                <label for="{{ form.last_name.id_for_label }}" class="col-sm-6 col-form-label">Last Name</label>
+                <div class="col-sm-6">
+                    {{ form.last_name }}
+                </div>
+            </div>
+           
+            <div class="row mb-3">
+                <label for="{{ form.password1.id_for_label }}" class="col-sm-6 col-form-label">Password</label>
+                <div class="col-sm-6">
+                    {{ form.password1 }}
+                </div>
+            </div>
+
+
+            <div class="row mb-3">
+                <label for="{{ form.password2.id_for_label }}" class="col-sm-6 col-form-label">Confirm Password</label>
+                <div class="col-sm-6">
+                    {{ form.password2 }}
+                </div>
+            </div>
+           
+            <div class="row">
+                <div class="col-sm-12 text-center">
+                    <button type="submit" class="btn btn-secondary btn-lg mt-3">Submit</button>
+                </div>
+            </div>
+        </form>
+    </div>
 {% endblock content %}
+
