--- a/Unit2_Django Models/Lesson9_User Login/myproject/users/templates/users/register.html
+++ b/Unit2_Django Models/Lesson9_User Login/myproject/users/templates/users/register.html
@@ -9,7 +9,7 @@
 
 {% block content %}
     <h1>Register a New User</h1>
-    <div class="container p-4 border rounded bg-light text-dark" style="max-width: 500px;>
+    <div class="container p-4 border rounded bg-light text-dark" style="max-width: 500px";>
         <form action="/users/register/" method="post">
             {% csrf_token %}
            
