New_Post_Starter

--- a/Unit2_Django Models/Lesson9_User Login/myproject/static/css/posts.css
+++ b/Unit2_Django Models/Lesson9_User Login/myproject/static/css/posts.css
@@ -17,3 +17,19 @@
     box-shadow: #000000;
     transition: transform 0.3s ease;
 }
+
+input[type="text"], 
+input[type="email"], 
+input[type="password"], 
+select { 
+    display: block;
+    width: 100%;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-color: #fff;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+}
