--- a/Unit2_Django Models/New_Post_Review/myproject/templates/base.html
+++ b/Unit2_Django Models/New_Post_Review/myproject/templates/base.html
@@ -16,14 +16,18 @@
         <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         {% block head %}{% endblock head %}
     </head>
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
+            
             <div class="container">
-                <a class="navbar-brand" href="#page-top">DJANGO BLOG</a>
+                {%if user.is_authenticated%}
+                <a class="navbar-brand" href="/">Hey, {{user.username}} !</a>
+                {%else%}
+                <a class="navbar-brand" href="/">DJANGO BLOG</a>
+                {%endif%}
                 <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
@@ -34,23 +38,23 @@
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded {% if active_link == 'home' %}active{% endif %}" href="/">Home</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded {% if active_link == 'about' %}active{% endif %}" href="/about">About</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded {% if active_link == 'posts' %}active{% endif %}" href="{% url 'posts:list' %}">Posts</a></li>
+                        
+                        
+
+                        {%if user.is_authenticated%}
+                        <li class="nav-item mx-0 mx-lg-1">
+                            <form method="POST" action="{% url 'users:logout' %}">
+                                {% csrf_token %}
+                            <button type="submit" class="nav-link py-3 px-0 px-lg-3 rounded">
+                                Logout
+                            </button>
+                            </form>
+                        </li>
+                        {%else%}
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded {% if active_link == 'register' %}active{% endif %}" href="{% url 'users:register' %}">Register</a></li>
-                        {% if user.is_authenticated %}
-    <li class="nav-item mx-0 mx-lg-1">
-        <form method="post" action="{% url 'users:logout' %}">
-            {% csrf_token %}
-            <button type="submit" class="nav-link py-3 px-0 px-lg-3 rounded {% if active_link == 'logout' %}active{% endif %}">
-                <i class="fas fa-sign-out-alt"></i> Logout
-            </button>
-        </form>
-    </li>
-{% else %}
-    <li class="nav-item mx-0 mx-lg-1">
-        <a class="nav-link py-3 px-0 px-lg-3 rounded {% if active_link == 'login' %}active{% endif %}" href="{% url 'users:login' %}">
-            <i class="fas fa-sign-in-alt"></i> Login
-        </a>
-    </li>
-{% endif %}
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded {% if active_link == 'login' %}active{% endif %}" href="{% url 'users:login' %}">Login</a></li>
+
+                        {%endif%}
 
                     </ul>
                 </div>
