--- a/Unit2_Django Models/New_Post_Review/myproject/users/templates/users/register.html
+++ b/Unit2_Django Models/New_Post_Review/myproject/users/templates/users/register.html
@@ -1,18 +1,18 @@
-{% extends "base.html" %}
-{% load static %}
+{% extends "base.html" %}  <!-- Extend the base template -->
+{% load static %}          <!-- Load static files -->
 
-{% block title %}Register a New User{% endblock title %}
+{% block title %}Register a New User{% endblock title %}  <!-- Set the title -->
 
 {% block header_image %}
-    <img src="{% static 'assets/blog/register.png' %}" alt="Register" width="200px" class="register-image">
+    <img src="{% static 'assets/blog/register.png' %}" alt="Register" width="200px" class="register-image">  <!-- Add the image in the header_image block -->
 {% endblock header_image %}
 
 {% block content %}
     <h1>Register a New User</h1>
-    <div class="container p-4 border rounded bg-light text-dark" style="max-width: 600px">
+    <div class="container p-4 border rounded bg-light text-dark" style="max-width: 500px";>
         <form action="/users/register/" method="post">
             {% csrf_token %}
-            
+           
             <!-- Display form errors -->
             {% if form.errors %}
                 <div class="alert alert-danger">
@@ -28,13 +28,14 @@
                     </ul>
                 </div>
             {% endif %}
-            
+           
             <div class="row mb-3">
                 <label for="{{ form.username.id_for_label }}" class="col-sm-6 col-form-label">Username</label>
                 <div class="col-sm-6">
                     {{ form.username }}
                 </div>
             </div>
+
 
             <div class="row mb-3">
                 <label for="{{ form.email.id_for_label }}" class="col-sm-6 col-form-label">Email</label>
@@ -43,6 +44,7 @@
                 </div>
             </div>
 
+
             <div class="row mb-3">
                 <label for="{{ form.first_name.id_for_label }}" class="col-sm-6 col-form-label">First Name</label>
                 <div class="col-sm-6">
@@ -50,13 +52,14 @@
                 </div>
             </div>
 
+
             <div class="row mb-3">
                 <label for="{{ form.last_name.id_for_label }}" class="col-sm-6 col-form-label">Last Name</label>
                 <div class="col-sm-6">
                     {{ form.last_name }}
                 </div>
             </div>
-            
+           
             <div class="row mb-3">
                 <label for="{{ form.password1.id_for_label }}" class="col-sm-6 col-form-label">Password</label>
                 <div class="col-sm-6">
@@ -64,13 +67,14 @@
                 </div>
             </div>
 
+
             <div class="row mb-3">
                 <label for="{{ form.password2.id_for_label }}" class="col-sm-6 col-form-label">Confirm Password</label>
                 <div class="col-sm-6">
                     {{ form.password2 }}
                 </div>
             </div>
-            
+           
             <div class="row">
                 <div class="col-sm-12 text-center">
                     <button type="submit" class="btn btn-secondary btn-lg mt-3">Submit</button>
@@ -79,3 +83,4 @@
         </form>
     </div>
 {% endblock content %}
+
