new post part 1

--- a/Unit2_Django Models/New_Post_Review/myproject/posts/templates/posts/posts_list.html
+++ b/Unit2_Django Models/New_Post_Review/myproject/posts/templates/posts/posts_list.html
@@ -5,6 +5,9 @@
 <link rel="stylesheet" href="{%static 'css/posts.css'%}">
 {% endblock head %}
 {% block header_image %}
+<a href="#">
+<img src="{%static 'assets/blog/newpost.png'%}" width="25%" alt="">    
+</a>
 <img class="masthead-avatar mb-5" src="{% static 'assets/blog/posts.webp' %}" alt="..." />
 {% endblock header_image %}
 {% block header_title %}Posts List{% endblock header_title %}
