--- a/Unit3_BTRE/pages/templates/base.html
+++ b/Unit3_BTRE/pages/templates/base.html
@@ -16,11 +16,15 @@
 
 </head>
 <body>
+
     <!-- Top Bar -->
      {% include "partials/_topbar.html" %}
     <!-- Nav Bar -->
+    {% include "partials/_navbar.html" %}
     {% block content %}{% endblock content %}
     <!-- Footer -->
+    {% include "partials/_footer.html" %}
+
     <script src="{% static 'js/jquery-3.3.1.min.js'%}"></script>
     <script src="{% static 'js/bootstrap.bundle.min.js'%}"></script>
     <script src="{% static 'js/main.js'%} "></script>
