--- a/Unit3_BTRE/templates/base.html
+++ b/Unit3_BTRE/templates/base.html
@@ -1,33 +1,31 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BT REAL ESTATE</title>
-<!-- Font Awesome -->
-  <link rel="stylesheet" href="{% static 'css/all.css' %}">
-  <!-- Bootstrap -->
-  <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
-  <!-- Custom -->
-  <link rel="stylesheet" href="{% static 'css/style.css' %}">
-   <!-- Lightbox -->
-<link rel="stylesheet" href="{% static 'css/lightbox.min.css' %}">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="{% static 'css/all.css' %}" />
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}" />
+    <!-- Custom -->
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+    <!-- Lightbox -->
+    <link rel="stylesheet" href="{% static 'css/lightbox.min.css' %}" />
 
-</head>
-<body>
-
-    <!-- Top Bar -->
-     {% include "partials/_topbar.html" %}
-    <!-- Nav Bar -->
+    <title>BT Real Estate</title>
+  </head>
+  <body>
+    {% include "partials/_topbar.html" %}
     {% include "partials/_navbar.html" %}
+
     {% block content %}{% endblock content %}
-    <!-- Footer -->
     {% include "partials/_footer.html" %}
 
-    <script src="{% static 'js/jquery-3.3.1.min.js'%}"></script>
-    <script src="{% static 'js/bootstrap.bundle.min.js'%}"></script>
-    <script src="{% static 'js/main.js'%} "></script>
-    <script src="{% static 'js/lightbox.min.js'%} "></script>
-</body>
+
+    <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'js/main.js' %}"></script>
+    <script src="{% static 'js/lightbox.min.js' %}"></script>
+  </body>
 </html>
