a few listings and realtors added

--- a/Unit3_BTRE/templates/pages/about.html
+++ b/Unit3_BTRE/templates/pages/about.html
@@ -40,7 +40,7 @@
         </div>
         <div class="col-md-4">
           <div class="card">
-            <img class="card-img-top" src="assets/img/realtors/kyle.jpg" alt="Seller of the month">
+            <img class="card-img-top" src="{% static 'img/realtors/kyle.jpg' %}" alt="Seller of the month">
             <div class="card-body">
               <h5 class="card-title">Seller Of The Month</h5>
               <h6 class="text-secondary">Kyle Brown</h6>
@@ -68,7 +68,7 @@
       <h2 class="text-center">Our Team</h2>
       <div class="row text-center">
         <div class="col-md-4">
-          <img src="assets/img/realtors/kyle.jpg" alt="" class="rounded-circle mb-3">
+          <img src="{% static 'img/realtors/kyle.jpg' %}" alt="" class="rounded-circle mb-3">
           <h4>Kyle Brown</h4>
           <p class="text-success">
             <i class="fas fa-award text-success mb-3"></i> Realtor</p>
@@ -80,7 +80,7 @@
         </div>
 
         <div class="col-md-4">
-          <img src="assets/img/realtors/mark.jpg" alt="" class="rounded-circle mb-3">
+          <img src="{% static 'img/realtors/mark.jpg' %}" alt="" class="rounded-circle mb-3">
           <h4>Mark Hudson</h4>
           <p class="text-success">Realtor</p>
           <hr>
@@ -91,7 +91,7 @@
         </div>
 
         <div class="col-md-4">
-          <img src="assets/img/realtors/jenny.jpg" alt="" class="rounded-circle mb-3">
+          <img src="{% static 'img/realtors/jenny.jpg' %}" alt="" class="rounded-circle mb-3">
           <h4>Jenny Johnson</h4>
           <p class="text-success">Realtor</p>
           <hr>
