--- a/Unit3_BTRE/templates/about.html
+++ b/Unit3_BTRE/templates/about.html
@@ -53,7 +53,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
     <div class="container">
       <a class="navbar-brand" href="index.html">
-        <img src="assets/img/logo.png" class="logo" alt="">
+        <img src="{% static 'img/logo.png'%}" class="logo" alt="">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup">
         <span class="navbar-toggler-icon"></span>
@@ -119,14 +119,14 @@
         <div class="col-md-8">
           <h2>We Search For The Perfect Home</h2>
           <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt, pariatur!</p>
-          <img src="assets/img/about.jpg" alt="">
+          <img src="{% static 'img/about.jpg" alt="">
           <p class="mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis esse officia repudiandae ad saepe ex, amet
             neque quod accusamus rem quia magnam magni dolorum facilis ullam minima perferendis? Exercitationem at quaerat
             commodi id libero eveniet harum perferendis laborum molestias quia.</p>
         </div>
         <div class="col-md-4">
           <div class="card">
-            <img class="card-img-top" src="assets/img/realtors/kyle.jpg" alt="Seller of the month">
+            <img class="card-img-top" src="{% static 'img/realtors/kyle.jpg" alt="Seller of the month">
             <div class="card-body">
               <h5 class="card-title">Seller Of The Month</h5>
               <h6 class="text-secondary">Kyle Brown</h6>
@@ -154,7 +154,7 @@
       <h2 class="text-center">Our Team</h2>
       <div class="row text-center">
         <div class="col-md-4">
-          <img src="assets/img/realtors/kyle.jpg" alt="" class="rounded-circle mb-3">
+          <img src="{% static 'img/realtors/kyle.jpg" alt="" class="rounded-circle mb-3">
           <h4>Kyle Brown</h4>
           <p class="text-success">
             <i class="fas fa-award text-success mb-3"></i> Realtor</p>
@@ -166,7 +166,7 @@
         </div>
 
         <div class="col-md-4">
-          <img src="assets/img/realtors/mark.jpg" alt="" class="rounded-circle mb-3">
+          <img src="{% static 'img/realtors/mark.jpg" alt="" class="rounded-circle mb-3">
           <h4>Mark Hudson</h4>
           <p class="text-success">Realtor</p>
           <hr>
@@ -177,7 +177,7 @@
         </div>
 
         <div class="col-md-4">
-          <img src="assets/img/realtors/jenny.jpg" alt="" class="rounded-circle mb-3">
+          <img src="{% static 'img/realtors/jenny.jpg" alt="" class="rounded-circle mb-3">
           <h4>Jenny Johnson</h4>
           <p class="text-success">Realtor</p>
           <hr>
@@ -196,9 +196,9 @@
     <span class="year"></span> BT Real Estate
   </footer>
 
-  <script src="assets/js/jquery-3.3.1.min.js "></script>
-  <script src="assets/js/bootstrap.bundle.min.js "></script>
-  <script src="assets/js/main.js "></script>
+  <script src="{% static 'js/jquery-3.3.1.min.js "></script>
+  <script src="{% static 'js/bootstrap.bundle.min.js "></script>
+  <script src="{% static 'js/main.js "></script>
 </body>
 
 </html>
