paginator previous-next

--- a/Unit3_BTRE/templates/listings/listings.html
+++ b/Unit3_BTRE/templates/listings/listings.html
@@ -88,23 +88,36 @@
 
       <div class="row">
         <div class="col-md-12">
+          {% if listings.has_other_pages %}
           <ul class="pagination">
-            <li class="page-item disabled">
-              <a class="page-link" href="#">&laquo;</a>
-            </li>
-            <li class="page-item active">
-              <a class="page-link" href="#">1</a>
-            </li>
-            <li class="page-item">
-              <a class="page-link" href="#">2</a>
-            </li>
-            <li class="page-item">
-              <a class="page-link" href="#">3</a>
-            </li>
-            <li class="page-item">
-              <a class="page-link" href="#">&raquo;</a>
-            </li>
+              <!-- Previous page button start -->
+               {% if listings.has_previous %}
+               <li class="page-item">
+                <a href="?page={{listings.previous_page_number}}" class="page-link">
+                  &laquo;
+                </a>
+               </li>
+               {%else%}
+               <li class="page-item disabled">
+                <a href="" class="page-link">&laquo;</a>
+               </li>
+               {% endif %}
+              <!-- Previous page button end -->
+              <!-- Next page button start -->
+               {% if listings.has_next %}
+               <li class="page-item">
+                <a href="?page={{listings.next_page_number}}" class="page-link">
+                  &raquo;
+                </a>
+               </li>
+               {%else%}
+               <li class="page-item disabled">
+                <a href="" class="page-link">&raquo;</a>
+               </li>
+               {% endif %}
+              <!-- Next page button end -->
           </ul>
+          {% endif %}
         </div>
       </div>
     </div>
