--- a/Unit3_BTRE/templates/partials/_navbar.html
+++ b/Unit3_BTRE/templates/partials/_navbar.html
@@ -57,8 +57,14 @@
               Welcome {{user.username}} (Dashboard)</a
             >
             </li>
-            <li>
-              Logout
+            <li class="nav-item mr-3">
+              <a href="javascript:{document.getElementById('logout').submit()}" class="nav-link">
+                <i class="fas fa-sign-out-alt"></i>  Logout
+              </a>
+              <form action="{% url 'logout' %}" method="POST" id="logout">
+                  {% csrf_token %}
+                  <input type="hidden">
+              </form>
             </li>
           {% else %}
           
