updated the listing page

--- a/Unit3_BTRE/templates/listings/listing.html
+++ b/Unit3_BTRE/templates/listings/listing.html
@@ -5,9 +5,9 @@
     <div class="container">
       <div class="row text-center">
         <div class="col-md-12">
-          <h1 class="display-4">45 Drivewood Circle</h1>
+          <h1 class="display-4">{{ listing.address }}</h1>
           <p class="lead">
-            <i class="fas fa-map-marker"></i> Norwood MA, 02062</p>
+            <i class="fas fa-map-marker"></i> {{ listing.city }} {{ listing.state }}, {{ listing.zipcode }}</p>
         </div>
       </div>
     </div>
@@ -24,7 +24,7 @@
           <li class="breadcrumb-item">
             <a href="{% url 'listings' %}">Listings</a>
           </li>
-          <li class="breadcrumb-item active">42 Drivewood Circle</li>
+          <li class="breadcrumb-item active">{{ listing.address }}</li>
         </ol>
       </nav>
     </div>
@@ -188,7 +188,11 @@
             </div>
             <div class="form-group">
               <label for="email" class="col-form-label">Email:</label>
-              <input type="email" name="email" class="form-control" required>
+              <input type="email" name="email" class="form-control" 
+              {% if user.is_authenticated %}
+              value="{{ user.email }}"
+              {%endif%}
+              required>
             </div>
             <div class="form-group">
               <label for="phone" class="col-form-label">Phone:</label>
