--- a/Unit3_BTRE/templates/listings/listing.html
+++ b/Unit3_BTRE/templates/listings/listing.html
@@ -30,6 +30,9 @@
     </div>
   </section>
 
+  
+  <!-- Alerts -->
+  {% include "partials/_alerts.html" %}
   <!-- Listing -->
   <section id="listing" class="py-4">
     <div class="container">
@@ -176,7 +179,7 @@
             <input type="hidden" name="listing_id" value="{{ listing.id }}">
             <div class="form-group">
               <label for="property_name" class="col-form-label">Property:</label>
-              <input type="text" name="listing" class="form-control" value="{{ listing.title }}" disabled>
+              <input type="text" name="listing" class="form-control" value="{{ listing.title }}">
             </div>
             <div class="form-group">
               <label for="name" class="col-form-label">Name:</label>
